concertando erro de portugues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h2 class="container__titulo">ShyLittleCats!</h2>
         <img src="https://thecatapi.com/api/images/get?format=src&type=gif" alt="imagem de gatos" class="container__imagem">
-        <button class="container__botao" id="refresh">Tocar gif!</button>
+        <button class="container__botao" id="refresh">Trocar gif!</button>
         </div>
 </body>
 </html>
